tests/custom/issues/439/stderr.expected
Error:
    439.essence:5:11:
  |
5 | such that atom in used
  |           ^^^^
Tried to use a Domain where Value was expected

